name:                xyzzyi
version:             0.1.0.0
synopsis:            xyzzy clone with yi
description:         Please see README.md
homepage:            https://github.com/githubuser/xyzzyi#readme
license:             BSD3
license-file:        LICENSE
author:              wkoiking
maintainer:          wanagida@gmail.com
copyright:           2016 wkoiking
category:            Editor
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable xyzzyi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xyzzyi
                     , yi
  default-language:    Haskell2010

test-suite xyzzyi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xyzzyi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/xyzzyi
